<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Plaphoons</string>
    <string name="preference_application">Preferences</string>
    <string name="preference_showapps_title">Show apps</string>
    <string name="preference_showapps_summary">Add a page with apps</string>
    <string name="preference_plafile_title">Filename of .pla file</string>
    <string name="preference_plafile_summary">without path</string>
    <string name="preference_pladir_title">Path to .pla file</string>
    <string name="preference_pladir_summary">leave empty for default value (i.e. root directory on sdcard)</string>
    <string name="preference_plachoose_title">Choose file</string>
    <string name="preference_plachoose_summary">using a filemanager like OI Filemanager</string>    
    <string name="preference_usesample_title">Use sample</string>
    <string name="preference_usesample_summary">that is preinstalled</string>
    <string name="preference_encoding_title">Character Encoding</string>
    <string name="preference_encoding_summary">Only change if there are problems with certain letters (default: iso-8859-1, alternatives: utf8)</string>
    <string name="preference_file">Use file</string>   
    <string name="preference_extended">Extended settings</string> 
    
    <string name="preference_locale_title">Language</string>
    <string name="preference_locale_summary">Choose a language to overwrite the default language of the device</string>
    
    <string name="preference_queuemodedrop_title">Drop unfinished spoken text</string>
    <string name="preference_queuemodedrop_summary">If checked, queued text is dropped</string>
    <string name="preference_playcontrolonly_title">Speak only on Play button</string>
    <string name="preference_playcontrolonly_summary">If checked, symbols are not played, only the written text when pressing play.</string>
    
    <string name="preference_android_settings">Android Settings</string>
    <string name="preference_appsettings_title">App settings Plaphoons</string>
    <string name="preference_appsettings_summary">Change Default launcher</string>
    <string name="preference_ttssettings_title">Text-To-Speech settings</string>
    <string name="preference_ttssettings_summary">Change TTS enginge and settings</string>
    
    <string name="menu_preferences">Preferences</string>
    <string name="menu_launcher">Exit</string>
    <string name="menu_about">About</string>
    <string name="choose_launcher">Please choose</string>
    <string name="install_filemanger">Filemanger missing! Please install from market</string>
    <string name="parsing_pla_file_failed">Parsing .pla file failed.</string>
    <string name="about">Developed by Friedger Müffke\nbased on Plaphoons by Fressa Project(http://fressa.blogspot.com).\nSource code available at https://github.com/openintents/plaphoons-for-android.\nContact support@openintents.org</string>
    
    <string name="home">Home</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="language_changed">Language changed to %s</string>
</resources>
