<?xml version="1.0" encoding="utf-8"?>
<!--
     * Copyright (C) 2009-2010 OpenIntents.org * * Licensed under the Apache 
	License, Version 2.0 (the "License"); * you may not use this file except 
	in compliance with the License. * You may obtain a copy of the License at 
	* * http://www.apache.org/licenses/LICENSE-2.0 * * Unless required by applicable 
	law or agreed to in writing, software * distributed under the License is 
	distributed on an "AS IS" BASIS, * WITHOUT WARRANTIES OR CONDITIONS OF ANY 
	KIND, either express or implied. * See the License for the specific language 
	governing permissions and * limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:disableDependentsState="true"
        android:key="usesample"
        android:summary="@string/preference_usesample_summary"
        android:title="@string/preference_usesample_title" />

    <PreferenceCategory
        android:shouldDisableView="true"
        android:title="@string/preference_file" >
        <EditTextPreference
            android:defaultValue=""
            android:dependency="usesample"
            android:key="plachoose"
            android:summary="@string/preference_plachoose_summary"
            android:title="@string/preference_plachoose_title" />
        <EditTextPreference
            android:defaultValue=""
            android:dependency="usesample"
            android:key="pladir"
            android:summary="@string/preference_pladir_summary"
            android:title="@string/preference_pladir_title" />
        <EditTextPreference
            android:defaultValue=""
            android:dependency="usesample"
            android:key="plafile"
            android:summary="@string/preference_plafile_summary"
            android:title="@string/preference_plafile_title" />
        <EditTextPreference
            android:defaultValue="utf8"
            android:dependency="usesample"
            android:key="encoding"
            android:summary="@string/preference_encoding_summary"
            android:title="@string/preference_encoding_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_extended" >
        <org.openintents.preferences.LocalePreference
            android:key="locale"
            android:summary="@string/preference_locale_summary"
            android:title="@string/preference_locale_title" />

        <CheckBoxPreference
            android:key="playcontrolonly"
            android:defaultValue="false"
            android:summary="@string/preference_playcontrolonly_summary"
            android:title="@string/preference_playcontrolonly_title"
         />
        <CheckBoxPreference
            android:key="queuemodedrop"
            android:defaultValue="true"
            android:summary="@string/preference_queuemodedrop_summary"
            android:title="@string/preference_queuemodedrop_title"
         />
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="showapps"
            android:summary="@string/preference_showapps_summary"
            android:title="@string/preference_showapps_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_android_settings" >
        <PreferenceScreen
            android:key="appsettings"
            android:summary="@string/preference_appsettings_summary"
            android:title="@string/preference_appsettings_title" >
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:org.openintents.plaphoons.sample" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="ttssettings"
            android:summary="@string/preference_ttssettings_summary"
            android:title="@string/preference_ttssettings_title" >
            <intent
                android:action="android.settings.SETTINGS"
            />
        </PreferenceScreen>
    </PreferenceCategory>
   
</PreferenceScreen>